@@ -49,7 +49,6 @@ import org.springframework.web.client.RestTemplate;
 import java.io.IOException;
 import java.net.URLEncoder;
 import java.nio.charset.StandardCharsets;
-import java.util.Collections;
 import java.util.List;
 
 import static org.cloudfoundry.identity.uaa.integration.util.IntegrationTestUtils.doesSupportZoneDNS;
@@ -87,7 +86,6 @@ public class LoginIT {
 
     @Autowired
     SimpleSmtpServer simpleSmtpServer;
-    private String testzone3;
 
     @Before
     @After
@@ -102,10 +100,10 @@ public class LoginIT {
     }
 
     @Test
-    public void check_JSESSIONID_defaults() throws Exception {
+    public void check_JSESSIONID_defaults() {
         RestTemplate template = new RestTemplate();
         HttpHeaders headers = new HttpHeaders();
-        List<String> cookies = Collections.EMPTY_LIST;
+        List<String> cookies;
         LinkedMultiValueMap<String, String> requestBody = new LinkedMultiValueMap<>();
         requestBody.add("username", testAccounts.getUserName());
         requestBody.add("password", testAccounts.getPassword());
@@ -206,7 +204,7 @@ public class LoginIT {
     }
 
     @Test
-    public void testSuccessfulLoginNewUser() throws Exception {
+    public void testSuccessfulLoginNewUser() {
         String newUserEmail = createAnotherUser();
         webDriver.get(baseUrl + "/logout.do");
         webDriver.get(baseUrl + "/login");
@@ -222,17 +220,17 @@ public class LoginIT {
     }
 
     @Test
-    public void testLoginHint() throws Exception {
+    public void testLoginHint() {
         String newUserEmail = createAnotherUser();
         webDriver.get(baseUrl + "/logout.do");
-        String ldapLoginHint = URLEncoder.encode("{\"origin\":\"ldap\"}", "UTF-8");
+        String ldapLoginHint = URLEncoder.encode("{\"origin\":\"ldap\"}", StandardCharsets.UTF_8);
         webDriver.get(baseUrl + "/login?login_hint=" + ldapLoginHint);
         assertEquals("Cloud Foundry", webDriver.getTitle());
         assertThat(webDriver.getPageSource(), not(containsString("or sign in with:")));
         attemptLogin(newUserEmail, USER_PASSWORD);
         assertThat(webDriver.findElement(By.className("alert-error")).getText(), containsString("Unable to verify email or password. Please try again."));
 
-        String uaaLoginHint = URLEncoder.encode("{\"origin\":\"uaa\"}", "UTF-8");
+        String uaaLoginHint = URLEncoder.encode("{\"origin\":\"uaa\"}", StandardCharsets.UTF_8);
         webDriver.get(baseUrl + "/login?login_hint=" + uaaLoginHint);
         assertEquals("Cloud Foundry", webDriver.getTitle());
         assertThat(webDriver.getPageSource(), not(containsString("or sign in with:")));
@@ -242,7 +240,7 @@ public class LoginIT {
     }
 
     @Test
-    public void testNoZoneFound() throws Exception {
+    public void testNoZoneFound() {
         assertTrue("Expected testzone1/2/3/4/doesnotexist.localhost to resolve to 127.0.0.1", doesSupportZoneDNS());
         webDriver.get(baseUrl.replace("localhost","testzonedoesnotexist.localhost") + "/login");
         assertEquals("The subdomain does not map to a valid identity zone.",webDriver.findElement(By.tagName("p")).getText());
@@ -256,7 +254,7 @@ public class LoginIT {
     }
 
     @Test
-    public void testPasscodeRedirect() throws Exception {
+    public void testPasscodeRedirect() {
         webDriver.get(baseUrl + "/passcode");
         assertEquals("Cloud Foundry", webDriver.getTitle());
 
@@ -266,7 +264,7 @@ public class LoginIT {
     }
 
     @Test
-    public void testUnsuccessfulLogin() throws Exception {
+    public void testUnsuccessfulLogin() {
         webDriver.get(baseUrl + "/login");
         assertEquals("Cloud Foundry", webDriver.getTitle());
 
@@ -276,7 +274,7 @@ public class LoginIT {
     }
 
     @Test
-    public void testAccessDeniedIfCsrfIsMissing() throws Exception {
+    public void testAccessDeniedIfCsrfIsMissing() {
         RestTemplate template = new RestTemplate();
         template.setErrorHandler(new ResponseErrorHandler() {
             @Override
@@ -285,7 +283,7 @@ public class LoginIT {
             }
 
             @Override
-            public void handleError(ClientHttpResponse response) throws IOException {
+            public void handleError(ClientHttpResponse response) {
             }
 
         });
@@ -293,7 +291,7 @@ public class LoginIT {
         body.add("username", testAccounts.getUserName());
         body.add("password", testAccounts.getPassword());
         HttpHeaders headers = new HttpHeaders();
-        headers.add(headers.ACCEPT, MediaType.TEXT_HTML_VALUE);
+        headers.add(HttpHeaders.ACCEPT, MediaType.TEXT_HTML_VALUE);
         ResponseEntity<String> loginResponse = template.exchange(baseUrl + "/login.do",
             HttpMethod.POST,
             new HttpEntity<>(body, headers),
@@ -312,11 +310,11 @@ public class LoginIT {
     }
 
     @Test
-    public void testRedirectAfterUnsuccessfulLogin() throws Exception {
+    public void testRedirectAfterUnsuccessfulLogin() {
         RestTemplate template = new RestTemplate();
 
         HttpHeaders headers = new HttpHeaders();
-        headers.set(headers.ACCEPT, MediaType.TEXT_HTML_VALUE);
+        headers.set(HttpHeaders.ACCEPT, MediaType.TEXT_HTML_VALUE);
         ResponseEntity<String> loginResponse = template.exchange(baseUrl + "/login",
             HttpMethod.GET,
             new HttpEntity<>(null, headers),
@@ -346,7 +344,7 @@ public class LoginIT {
     }
 
     @Test
-    public void userLockedoutAfterUnsuccessfulAttempts() throws Exception {
+    public void userLockedoutAfterUnsuccessfulAttempts() {
         String userEmail = createAnotherUser();
 
         webDriver.get(baseUrl + "/logout.do");
@@ -367,7 +365,7 @@ public class LoginIT {
     }
 
     @Test
-    public void testBuildInfo() throws Exception {
+    public void testBuildInfo() {
         webDriver.get(baseUrl + "/login");
 
         String regex = "Version: \\S+, Commit: \\w{7}, Timestamp: .+, UAA: " + baseUrl;
@@ -375,7 +373,7 @@ public class LoginIT {
     }
 
     @Test
-    public void testAccountChooserManualLogin() throws Exception {
+    public void testAccountChooserManualLogin() {
         String zoneUrl = createDiscoveryZone();
 
         String userEmail = createAnotherUser(zoneUrl);
@@ -395,7 +393,7 @@ public class LoginIT {
     }
 
     @Test
-    public void testAccountChooserFlow() throws Exception {
+    public void testAccountChooserFlow() {
         String zoneUrl = createDiscoveryZone();
 
         String userEmail = createAnotherUser(zoneUrl);
@@ -471,7 +469,7 @@ public class LoginIT {
     }
 
     private String createDiscoveryZone() {
-        testzone3 = "testzone3";
+        String testzone3 = "testzone3";
 
         RestTemplate identityClient = IntegrationTestUtils.getClientCredentialsTemplate(
             IntegrationTestUtils.getClientCredentialsResource(baseUrl, new String[]{"zones.write", "zones.read", "scim.zones"}, "identity", "identitysecret")
